도대체 뭘 했는지 모르곘지만 해결함